--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,20 @@
     "string_view": "cpp",
     "vector": "cpp",
     "iostream": "cpp",
-    "ios": "cpp"
+    "ios": "cpp",
+    "queue": "cpp",
+    "iosfwd": "cpp",
+    "__hash_table": "cpp",
+    "__tree": "cpp",
+    "bitset": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "map": "cpp",
+    "regex": "cpp",
+    "set": "cpp",
+    "stack": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "valarray": "cpp"
   }
 }
