--- a/2. Baekjoon/1605_반복_부분문자열/1605_반복_부분문자열.cbp
+++ b/2. Baekjoon/1605_반복_부분문자열/1605_반복_부분문자열.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="같은_탑.cpp" />
+		<Option title="1605_반복_부분문자열" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/같은_탑" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/1605_반복_부분문자열" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/같은_탑" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/1605_반복_부분문자열" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,7 +32,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="input.txt" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
