--- a/2. Baekjoon/16978_수열과_쿼리_22/16978_수열과_쿼리_22.cbp
+++ b/2. Baekjoon/16978_수열과_쿼리_22/16978_수열과_쿼리_22.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="같은_탑.cpp" />
+		<Option title="16978_수열과_쿼리_22" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/같은_탑" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/16978_수열과_쿼리_22" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/같은_탑" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/16978_수열과_쿼리_22" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,8 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="input.txt" />
 		<Unit filename="main.cpp" />
-		<Extensions />
+		<Extensions>
+			<lib_finder disable_auto="1" />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
