--- a/2. Baekjoon/나무_자르기/나무_자르기.cbp
+++ b/2. Baekjoon/나무_자르기/나무_자르기.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="input1.txt" />
+		<Unit filename="input2.txt" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
