--- a/7. sw_expert_academy/.vscode/settings.json
+++ b/7. sw_expert_academy/.vscode/settings.json
@@ -6,6 +6,8 @@
     "vector": "cpp",
     "ostream": "cpp",
     "map": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "array": "cpp",
+    "deque": "cpp"
   }
 }
