--- a/8. codetree/.vscode/settings.json
+++ b/8. codetree/.vscode/settings.json
@@ -5,6 +5,9 @@
     "iostream": "cpp",
     "set": "cpp",
     "string": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "map": "cpp",
+    "unordered_map": "cpp",
+    "regex": "cpp"
   }
 }
