--- a/8. codetree/.vscode/settings.json
+++ b/8. codetree/.vscode/settings.json
@@ -8,6 +8,9 @@
     "string_view": "cpp",
     "map": "cpp",
     "unordered_map": "cpp",
-    "regex": "cpp"
+    "regex": "cpp",
+    "stack": "cpp",
+    "compare": "cpp",
+    "functional": "cpp"
   }
 }
