--- a/8. codetree/.vscode/settings.json
+++ b/8. codetree/.vscode/settings.json
@@ -14,6 +14,11 @@
     "functional": "cpp",
     "iosfwd": "cpp",
     "complex": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "ostream": "cpp",
+    "__tree": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "unordered_set": "cpp"
   }
 }
